# Footlight

./: .gitignore  CMakeLists.txt  fixture.cpp  fixture.h  main.cpp  mainwindow.ui  readme.md
db/: migrations0001.sql  schema.mmd
definitions/generic/: cmy-fader.json  color-temperature-fader.json  drgbw-fader.json  grbw-fader.json  pan-tilt.json  rgb-fader.json  rgba-fader.json  rgbd-fader.json  rgbwauv-fader.json  rgbww-fader.json
definitions/mslighting/: mhled-3618z.json
docs/: class_diagram.md  classes.md  features.md  fixture-definitions.md  icons.md  names.md  other_repos.md  ownership.md  pointers.md  qt-basics.md  sharing.md
examples/savegame/: game.cpp  main.cpp
fixtures/generic/: 4-channel-dimmer-pack.json  cw-ww-fader.json  desk-channel.json  drgb-fader.json  rgbw-fader.json  strobe.json
main/: main.cpp
models/: fixture.cpp  fixture.h  fixturegroup.cpp  fixturegroup.h  fixturegroupitem.cpp  fixturegroupitem.h  fixturemodel.cpp  fixturemodel.h  show.cpp  show.h
resources/: Info.plist  footlight.icns  icons.qrc
ui/: fixturemodel.cpp  fixturemodel.h  homewindow.cpp  homewindow.h  homewindow.ui  neworopenwindow.cpp  neworopenwindow.h  neworopenwindow.ui  showwindow.cpp  showwindow.h  showwindow.ui
