# from https://github.com/AndreiCherniaev/CMake_variable_to_code/tree/main
add_compile_definitions(HF_ORG_NAME=${HF_ORG_NAME})
add_compile_definitions(HF_ORG_DOMAIN=${HF_ORG_DOMAIN})

add_compile_definitions(HF_APP_NAME=${HF_APP_NAME})
add_compile_definitions(HF_APP_DISPLAY_NAME=${HF_APP_DISPLAY_NAME})
add_compile_definitions(HF_APP_DESCRIPTION=${HF_APP_DESCRIPTION})
add_compile_definitions(HF_APP_VERSION=${HF_APP_VERSION})

add_compile_definitions(CMAKE_PROJECT_NAME=${CMAKE_PROJECT_NAME})
add_compile_definitions(CMAKE_PROJECT_DESCRIPTION=${CMAKE_PROJECT_DESCRIPTION})
add_compile_definitions(CMAKE_PROJECT_VERSION=${CMAKE_PROJECT_VERSION})

# Get the Unix time, ie seconds since UTC midnight on 1 Jan 1970
string(TIMESTAMP unix_time "%s")

cmake_minimum_required(VERSION 3.19)
project(Footlight LANGUAGES CXX DESCRIPTION "Stage Lighting for Humans" VERSION ${unix_time})
# Note - Amore can't cope with dots in VERSION, see https://phpc.social/@Brendan/116011766539206652
#project(${HF_APP_NAME} LANGUAGES CXX DESCRIPTION "${HF_APP_DESCRIPTION}" VERSION ${HF_APP_VERSION})

#set(MACOSX_FRAMEWORK_INFO_PLIST "resources/MacOSXFrameworkInfo.plist.in") # doesn't seem to work
set(CMAKE_OSX_DEPLOYMENT_TARGET "13.0") # shouldn't need to hard-code this...
set(MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1.006") # sets CFBundleShortVersionString but clears CFBundleVersion!
set(MACOSX_BUNDLE_BUNDLE_VERSION ${unix_time})    # sets CFBundleVersion again

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets LinguistTools)

if (ANDROID)
    message(FATAL_ERROR "This project cannot be built on Android (yet).")
endif()

if (IOS)
    message(FATAL_ERROR "This project cannot be built on iOS (yet).")
endif()


qt_standard_project_setup()


#! [appicon_macOS]
    # The MACOSX_BUNDLE_ICON_FILE variable is added to the Info.plist
    # generated by CMake. This variable contains the .icns file name,
    # without the path.
    set(MACOSX_BUNDLE_ICON_FILE footlight.icns)

    # And the following tells CMake where to find and install the file itself.
    set(app_icon_macos "${CMAKE_CURRENT_SOURCE_DIR}/resources/footlight.icns")
    set_source_files_properties(${app_icon_macos} PROPERTIES
           MACOSX_PACKAGE_LOCATION "Resources")



#! [appicon_macOS]


qt_add_executable(Footlight
    WIN32 MACOSX_BUNDLE

    main/main.cpp

    models/show.h               models/show.cpp
    models/fixture.h            models/fixture.cpp
    models/fixturegroup.h       models/fixturegroup.cpp
    models/fixturegroupitem.h   models/fixturegroupitem.cpp

    ui/homewindow.h             ui/homewindow.cpp       ui/homewindow.ui
    ui/showwindow.h             ui/showwindow.cpp       ui/showwindow.ui

    ui/fixturemodel.h           ui/fixturemodel.cpp
    resources/icons.qrc

    ${app_icon_macos}

)

qt_add_translations(
    TARGETS Footlight
    TS_FILES Footlight_en_AU.ts
)

set(CMAKE_MACOSX_BUNDLE TRUE)
set_target_properties(Footlight PROPERTIES
    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist"
)
# Need to un-comment this, then
# add all the old stuff back in...
# ... or can we just keep the generated Info.plist, and add (custom) additional keys?

target_link_libraries(Footlight
    PRIVATE
        Qt::Core
        Qt::Widgets
)

include(GNUInstallDirs)

install(TARGETS Footlight
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET Footlight
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
